--- a/QuyetDeProject/view/ask.html
+++ b/QuyetDeProject/view/ask.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Quyết đê</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<title>Quyết đê</title>
 </head>
 <body>
-    <h1>Mẹ quyết đẻ mổ tránh tháng cô hồn khiến con phải sinh non - Sức khỏe</h1>
-    <form action="/addquestion" method="POST">
-        <textarea name="questionContent" id="content" cols="30" rows="10" maxlength="200"></textarea>
-        <div>Còn <span id="count">200</span>/200 ký tự</div>
-        <button type="submit">Gửi</button>
-    </form>
-    
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <script src="./main.js"></script>
+	<h1>Hãy hỏi cộng đồng một câu hỏi đúng/sai hoặc có/không</h1>
+	<form action="/addquestion" method="POST">
+		<textarea name="questionContent" id="content" cols="30" rows="10" maxlength="200"></textarea>
+		<span>Còn <span id="count">200</span>/200 ký tự</span>
+		<button type="submit">Gửi</button>
+	</form>
+
+	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+	<script src="/public/ask.js"></script>
 </body>
 </html>
